fix issue where form elements are not visible when keyboard tray is open

--- a/pages/password/password.css
+++ b/pages/password/password.css
@@ -18,6 +18,7 @@
     display: none;
     position: relative;
     height: 100%;
+    margin-bottom: 350px;
 }
 
 #password-page .unlock {
